bundles/mock-openai-override-failover2/21-mock-openai-500-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-gpt-4o-500-svc
  namespace: mock-openai
  labels:
    app: mock-gpt-4o-500
spec:
  selector:
    app: mock-gpt-4o-500
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
